<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_list"
        android:title="@string/menu_item_list"
        android:visible="true"
        android:onClick="onMenuItemListClick"
        />

    <item
        android:id="@+id/manu_send"
        android:title="@string/menu_item_send"
        android:visible="true"
        android:onClick="onMenuItemSendClick"
        />


    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_item_map"
        android:visible="true"
        android:onClick="onMenuItemMapClick"/>


    //wywolywanie testowego widoku od Alicji
    <item
        android:id="@+id/menu_test"
        android:title="Test"
        android:onClick="testClick"/>


</menu>