<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_list"
        android:icon="@mipmap/ic_launcher"
        android:onClick="onMenuItemListClick"
        android:title="@string/menu_item_list" />

    <item
        android:id="@+id/menu_send"
        android:icon="@mipmap/ic_launcher"
        android:onClick="onMenuItemSendClick"
        android:title="@string/menu_item_send" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@mipmap/ic_launcher"
        android:onClick="onMenuItemLogoutClick"
        android:title="@string/menu_item_logout" />

    <!--wywolywanie testowego widoku od Alicji-->
    <item
        android:id="@+id/menu_test"
        android:icon="@mipmap/ic_launcher"
        android:onClick="testClick"
        android:title="Test" />
</menu>