<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:weightSum="16"
        tools:context="com.polsl.roadtracker.RegisterActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/et_rlogin"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_toEndOf="@id/image_register"
                android:hint="@string/login_hint"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_register"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/et_rpassword"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_below="@id/et_rlogin"
                android:layout_toEndOf="@id/password_register"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/confirm_password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_register"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_below="@id/et_rpassword"
                android:layout_toEndOf="@id/confirm_password_register"

                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="5">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onRegisterButtonClick"
                android:paddingBottom="@dimen/button_vertical_padding"
                android:paddingLeft="@dimen/button_horizontal_padding"
                android:paddingRight="@dimen/button_horizontal_padding"
                android:paddingTop="@dimen/button_vertical_padding"
                android:text="@string/register_button"
                android:textColor="@color/colorBackEditText" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>